# Garden

./: .gitignore  CMakeLists.txt  README
doc/: initPlants.json  initSettings.json
include/: appServer.h  client.h  farmer.h  garden.h  globalVariables.h  log.h  objectConverter.hpp  plant.h  seed.h
src/: appServer.cpp  client.cpp  farmer.cpp  garden.cpp  init.cpp  plant.cpp  seed.cpp
